# cli

./: Cargo.toml  README.md
src/: config.rs  context.rs  main.rs
src/api/: agent.rs  chat.rs  mod.rs
src/cli/: mod.rs  run.rs
src/cohere/: mod.rs
src/gemini/: mod.rs
src/groq/: mod.rs
src/openrouter/: mod.rs
src/providers/cohere/: mod.rs
src/providers/openrouter/: mod.rs
src/runtime/: mod.rs
