[package]
name = "minion"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = { version = "4", features = ["derive"] }
# logging
log = "0.4"
env_logger = "0.11"
# async
tokio = { version = "1", features = ["rt-multi-thread"] }
# HTTP
actix-web = "4"
actix-web-httpauth = "0.8"
reqwest = "0.12"
url = "2"
# data
serde = "1"
serde_json = "1"
# config
toml = "0.8"
dirs = "6"
# auth
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
webbrowser = "1"
# error handling
anyhow = "1"
# misc
once_cell = "1"
# autominion framework
agent-api = { path = "framework/libs/agent-api" }
git-proxy = { path = "framework/libs/git-proxy" }
llm-proxy = { path = "framework/libs/llm-proxy" }
